# pywinauth

./: .gitignore  .pylintrc  setup.cfg  setup.py  tests.py  winauth.py
winauth/: __init__.py  __main__.py
