[metadata]
name = pywinauth
version = 0.1.1
url = https://github.com/zeevro/pywinauth
download_url = https://github.com/zeevro/pywinauth/archive/master.zip
author = Zeev Rotshtein
author_email = zeevro@gmail.com
maintainer = Zeev Rotshtein
maintainer_email = zeevro@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: Public Domain
    Natural Language :: English
    Programming Language :: Python
license = None
description = A tool to generate TOTP code based using secrets from WinAuth
keywords =
    WinAuth
    TOTP
    2FA
    MFA

[options]
zip_safe = True
py_modules = winauth
install_requires =
    xmltodict
    pyotp
    pyperclip
    fuzzywuzzy

[options.entry_points]
console_scripts =
    winauthc = winauth:main
